--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/images/115.jpg" class="d-block w-100 " alt="slide 1">
+        <img src="assets/images/800.jpg" class="d-block w-100 " alt="slide 1">
         <div class="carousel-caption d-none d-md-block">
-          <h5>our kitchen staff</h5>
-          <p>the best chef we have in town</p>
+          <h5>our hotel hostel</h5>
+          <p>we offer the best services in our hotel</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/images/115.jpg" class="d-block w-100 " alt="slide 1">
+        <img src="assets/images/700.jpg" class="d-block w-100 " alt="slide 1">
         <div class="carousel-caption d-none d-md-block">
-          <h5>our kitchen staff</h5>
-          <p>the best chef we have in town</p>
+          <h5>tourist atttraction sites</h5>
+          <p>this is the best tourist attraction site ever</p>
         </div>
       </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
